entregas/entrega2/e2g10/gramatica.txt
## Interpretador del lenguaje Setlan.
## Gramática del lenguaje
## Autores:  - Mónica Figuera   11-10328
##           - Carlos Spaggiari 11-10987

program -> PROGRAM instruction

instruction -> block
             | ifInst
             | forInst 
             | whileInst 
             | repeatInst 
             | scanInst
             | printInst
             | identifier ASSIGN expression

block -> LCURLY usingInInst RCURLY 
       | LCURLY instructionBlock RCURLY

usingInInst -> USING declarationBlock IN instructionBlock

declarationBlock -> type idList SEMICOLON declarationBlock
  		   	      | type idList SEMICOLON

type -> INT 
  	  | BOOL 
  	  | SET

idList -> IDENTIFIER COMMA id
    	| IDENTIFIER

instructionBlock -> instruction SEMICOLON instructionBlock
                  | epsilon

ifInst -> IF LPAREN expression RPAREN instruction
		| IF LPAREN expression RPAREN instruction ELSE instruction 

forInst -> FOR expression direction expression DO instruction

direction -> MIN
		   | MAX

whileInst -> WHILE LPAREN expression RPAREN DO instruction
		   | WHILE LPAREN expression RPAREN

repeatInst -> REPEAT instruction whileInst

scanInst -> SCAN expression

printInst -> PRINT outputType
		   | PRINTLN outputType

outputType -> expression COMMA outputType
			| expression
            | string COMMA outputType
            | string

string -> STRING

expression -> expression PLUS expression
	        | expression MINUS expression
	        | expression TIMES expression
	        | expression DIVIDE expression
	        | expression MODULE expression
	        | expression AND expression
	        | expression OR expression
	        | expression LESSTHAN expression
	        | expression LESSEQUALTHAN expression
	        | expression GREATERTHAN expression
	        | expression GREATEREQUALTHAN expression
	        | expression EQUALS expression
	        | expression NOTEQUALS expression
	        | expression SETUNION expression
	        | expression SETDIFF expression
	        | expression SETINTERSECT expression
	        | expression SETMAPPLUS expression
	        | expression SETMAPMINUS expression
	        | expression SETMAPTIMES expression
	        | expression SETMAPDIVIDE expression
	        | expression SETMAPMODULE expression
	        | expression BELONGSTO expression
	        | NOT expression
	        | MINUS expression
	        | SETMINVALUE expression
	        | SETMAXVALUE expression
	        | SETSIZE expression
	        | LPAREN expression RPAREN
	        | booleanValue          
	        | identifier 
	        | set
	        | number

booleanValue -> TRUE 
              | FALSE 

identifier -> IDENTIFIER

set -> LCURLY setNumbers RCURLY

setNumbers -> expression COMMA setNumbers
   		    | expression

number -> NUMBER
